--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(to left,rgb(245, 162, 8,0.9),rgba(255, 217, 0, 0.895),rgba(255, 255, 255, 0.438),rgba(255, 217, 0, 0.868),rgb(245, 162, 8,0.9));
+  background: linear-gradient(to bottom, rgb(237, 233, 23), #f4f47a);
+  /* background: linear-gradient(to left,rgb(245, 162, 8,0.9),rgba(255, 217, 0, 0.895),rgba(255, 255, 255, 0.438),rgba(255, 217, 0, 0.868),rgb(245, 162, 8,0.9)); */
   
 }
 
